updated BDSEC and some files

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ Quals.zip
 dreamhack/forensics/Corrupted Disk Image/CorruptedDiskImage.raw.bak
 dreamhack/forensics/Corrupted Disk Image/CorruptedDiskImage.raw
 dreamhack/forensics/FFFFAAAATTT/FFFFAAAATTTT.001
-.pcap
+*.pcapng
