updated BDSEC files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ dreamhack/forensics/Corrupted Disk Image/CorruptedDiskImage.raw.bak
 dreamhack/forensics/Corrupted Disk Image/CorruptedDiskImage.raw
 dreamhack/forensics/FFFFAAAATTT/FFFFAAAATTTT.001
 *.pcapng
+Hacker_App
